--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -60,13 +60,25 @@
       <div class="row text-left">
         <div class="col-xs-12 col-sm-4 col-md-4">
           <ul class="list-unstyled quick-links">
-            <li><a href="/"><i class="fa fa-angle-double-right"></i> Impressum</a></li>
+            <li><a href="/"><i class="fa fa-angle-double-right"></i> Imprint</a></li>
             <li><a href="/"><i class="fa fa-angle-double-right"></i> Privacy</a></li>
             <li><a href="/"><i class="fa fa-angle-double-right"></i> Contact Us</a></li>
           </ul>
         </div>
-        <div class="col-xs-12 col-sm-4 col-md-4"></div>
-        <div class="col-xs-12 col-sm-4 col-md-4"></div>
+        <div class="col-xs-12 col-sm-4 col-md-4">
+          <ul class="list-unstyled quick-links">
+            <li><a href="/"><i class="fa fa-angle-double-right"></i> Sponsors</a></li>
+            <li><a href="/"><i class="fa fa-angle-double-right"></i> Career</a></li>
+            <li><a href="/"><i class="fa fa-angle-double-right"></i> Wildcodeschool</a></li>
+          </ul>
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-4">
+          <ul class="list-unstyled quick-links">
+            <li><a href="/"><i class="fa fa-angle-double-right"></i> Team</a></li>
+            <li><a href="/"><i class="fa fa-angle-double-right"></i> Our Mission</a></li>
+            <li><a href="/"><i class="fa fa-angle-double-right"></i> Protection of Minors</a></li>
+          </ul>
+        </div>
       </div>
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5">
