--- a/src/main/resources/templates/changePw.html
+++ b/src/main/resources/templates/changePw.html
@@ -8,203 +8,128 @@
 
   <header th:replace="fragments.html :: top">Here goes the header</header>
 
-  <main class="changePw_background">
-
-    <div class="changePw-box">
-      <section>
-        <div class="flex-container container">
-          <form method="post" th:action="@{/password/upsert}" th:object="${passwordForm}">
-
-            <!-- <input name="id" th:field="*{id}" type="hidden">  -->
-
-
-            <fieldset>
-              <h2>Change Password</h2>
-
-              <!-- 
-							<div th:if="${param.error}" class="alert alert-error">Invalid
-								username or password.</div>
-							<div th:if="${param.logout}" class="alert alert-success">You
-								have changed your password.</div>
- 							-->
-
-
-
-              <div class="row no-gutters">
-                <div class="col-7">
-
-                  <input name="_csrf" type="hidden" value="f8bf43d7-b1d4-40e1-8098-c30160fdefe3">
-                  <a href="javascript:javascript:history.go(-1)" class="btn btn-dark btn-block">
-                    <span sec:authentication="name"></span>
-                  </a>
-
-                </div>
-              </div>
-
-
-              <div class="row no-gutters">
-                <p></p>
-              </div>
-
-              <div class="row no-gutters">
-                <div class="col-7">
-
-
-
-                  <p>
-                    <!-- class="btn btn-lg btn-danger btn-block">Don't change Password</a> -->
-
-                    <!-- Label weggelassen - passt auch so... altes Label ==>    <label for="password">Password</label>
-									... Änderung der Schriftgröße: <p class="pwChange-password">
-									
-									Und in CSS: ===========================================>
-									.pwChange-password{
-										font-size: 1.5rem;
-										font-weight: 600;
-									}
-									<<======================================================
-									
-									-->
-                    <!-- btn-lg  -->
-
-                    <input type="password" class="form-control " id="password" aria-describedby="passwordHelp"
-                      name="password" onchange="if(this.checkValidity()) form.passwordRepeated.pattern = this.value;"
-                      placeholder="New password" required th:field="*{password}">
-                    <!-- required th:field="*{password}" -->
-
-
-
-                  </p>
-
-
-                  <!-- NEU =======================================================================>
-									<div class="form-group">
-									<label for="password">Password</label>
-									<input type="password" class="form-control" id="password" aria-describedby="passwordHelp" name="password" 
-									onchange="if(this.checkValidity()) form.passwordRepeated.pattern = this.value;"
-										placeholder="Password" required th:field="*{password}">
-									</div>
-									
-									-->
-
-
-                  <!-- ALT =======================================================================>
-										<label for="password" class="sr-only">Password2</label> <input
-											type="password" id="password" name="password"
-											onchange="if(this.checkValidity()) form.passwordRepeated.pattern = this.value;"
-											class="form-control" placeholder="New password" required="">
--->
-
-
-
-
-                </div>
-              </div>
-
-
-
-
-
-
-
-
-
-
-              <div class="row no-gutters">
-                <div class="col-7">
-
-
-                  <input type="password" class="form-control" id="passwordRepeated"
-                    aria-describedby="passwordRepeatedHelp" name="passwordRepeated"
-                    onchange="this.setCustomValidity(this.validity.patternMismatch ? 'Please enter the same Password as above' : '');"
-                    placeholder="Repeat new password" required th:field="*{passwordRepeated}">
-                  <!--  th:field="*{passwordRepeated}"  -->
-
-
-                  <p>
-
-                    <!-- NEU =======================================================================>
-									
-									<div class="form-group">
-									<label for="passwordRepeated">Password (repeated)</label> <input
-										type="password" class="form-control" id="passwordRepeated"
-										aria-describedby="passwordRepeatedHelp"
-										name="passwordRepeated"
-										onchange="this.setCustomValidity(this.validity.patternMismatch ? 'Please enter the same Password as above' : '');"
-										placeholder="Verify Password" required
-										th:field="*{passwordRepeated}">
-									</div>
-									
-									
-									 -->
-
-                    <!-- ALT =======================================================================>
-										<label for="username" class="sr-only">Email2</label> <input
-											type="text" id="username" name="username"
-											onchange="this.setCustomValidity(this.validity.patternMismatch ? 'Please enter the same Password as above' : '');"
-											class="form-control" placeholder="Repeat new password"
-											required="" autofocus="">
-											-->
-
-                  </p>
-                </div>
-              </div>
-            </fieldset>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-            <div class="row no-gutters">
-              <div class="col-7">
-                <input name="_csrf" type="hidden" value="f8bf43d7-b1d4-40e1-8098-c30160fdefe3">
-
-                <button type="submit" value="Submit" class="btn btn-lg btn-success btn-block">Change Password</button>
-
-              </div>
-            </div>
-
-
-
-
-
-
-
-
-
-
-
-
-          </form>
-
-
-          <div class="row no-gutters">
-            <div class="col-7">
-              <input name="_csrf" type="hidden" value="f8bf43d7-b1d4-40e1-8098-c30160fdefe3">
-              <a href="javascript:javascript:history.go(-1)" class="btn btn-lg btn-danger btn-block">Don't change
-                Password</a>
-
-            </div>
+  <main>
+
+    <!--     Jumbotron -->
+    <!--     <div class="jumbotron"> -->
+    <!--       <img class="img" src="../images/milkyway.jpg" alt="alt"> -->
+    <!--       <div class="box"> -->
+    <!--         <h1 class="display-4" style="color: black">Please Login</h1> -->
+    <!--         <p class="lead" style="color: black">If you don't have an user account yet, please register.</p> -->
+    <!--       </div> -->
+    <!--     </div> -->
+
+    <div class="container">
+      <form class="form-signin form-one-column" method="post" th:action="@{/password/upsert}"
+        th:object="${passwordForm}">
+        <div class="row">
+          <div class="col col-12">
+            <h2 class="form-signin-heading">Change Password</h2>
+            <p>
+              <label for="username" class="sr-only">Email</label> <input type="password" class="form-control"
+                id="password" name="password"
+                onchange="if(this.checkValidity()) form.passwordRepeated.pattern = this.value;"
+                placeholder="New password" required autofocus th:field="*{password}">
+            </p>
+            <p>
+              <label for="password" class="sr-only">Password</label> <input type="password" class="form-control"
+                id="passwordRepeated" name="passwordRepeated"
+                onchange="this.setCustomValidity(this.validity.patternMismatch ? 'Please enter the same Password as above' : '');"
+                placeholder="Repeat new password" required th:field="*{passwordRepeated}">
+            </p>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">
+              <i class="fas fa-sign-in-alt fa-fw"></i> Save new Password
+            </button>
+            <a class="btn btn-lg btn-danger btn-block" href="javascript:javascript:history.go(-1)">
+              Cancel</a>
           </div>
         </div>
-
-      </section>
+      </form>
     </div>
 
   </main>
 
 
-  <footer th:replace="fragments.html :: bottom">Here goes the footer</footer>
 
+
+
+  <!--   <main class="changePw_background"> -->
+
+  <!--     <div class="changePw-box"> -->
+  <!--       <section> -->
+  <!--         <div class="flex-container container"> -->
+  <!--           <form method="post" th:action="@{/password/upsert}" th:object="${passwordForm}"> -->
+
+  <!--             <fieldset> -->
+  <!--               <h2>Change Password</h2> -->
+
+  <!--               <div class="row no-gutters"> -->
+  <!--                 <div class="col-7"> -->
+
+  <!--                   <input name="_csrf" type="hidden" value="f8bf43d7-b1d4-40e1-8098-c30160fdefe3"> -->
+  <!--                   <a href="javascript:javascript:history.go(-1)" class="btn btn-dark btn-block"> -->
+  <!--                     <span sec:authentication="name"></span> -->
+  <!--                   </a> -->
+
+  <!--                 </div> -->
+  <!--               </div> -->
+
+  <!--               <div class="row no-gutters"> -->
+  <!--                 <p></p> -->
+  <!--               </div> -->
+
+  <!--               <div class="row no-gutters"> -->
+  <!--                 <div class="col-7"> -->
+  <!--                   <p> -->
+
+  <!--                     <input type="password" class="form-control " id="password" aria-describedby="passwordHelp" -->
+  <!--                       name="password" onchange="if(this.checkValidity()) form.passwordRepeated.pattern = this.value;" -->
+  <!--                       placeholder="New password" required th:field="*{password}"> -->
+  <!--                   </p> -->
+  <!--                 </div> -->
+  <!--               </div> -->
+
+  <!--               <div class="row no-gutters"> -->
+  <!--                 <div class="col-7"> -->
+
+  <!--                   <input type="password" class="form-control" id="passwordRepeated" -->
+  <!--                     aria-describedby="passwordRepeatedHelp" name="passwordRepeated" -->
+  <!--                     onchange="this.setCustomValidity(this.validity.patternMismatch ? 'Please enter the same Password as above' : '');" -->
+  <!--                     placeholder="Repeat new password" required th:field="*{passwordRepeated}"> -->
+
+  <!--                   <p> -->
+  <!--                   </p> -->
+  <!--                 </div> -->
+  <!--               </div> -->
+  <!--             </fieldset> -->
+
+  <!--             <div class="row no-gutters"> -->
+  <!--               <div class="col-7"> -->
+  <!--                 <input name="_csrf" type="hidden" value="f8bf43d7-b1d4-40e1-8098-c30160fdefe3"> -->
+
+  <!--                 <button type="submit" value="Submit" class="btn btn-lg btn-success btn-block">Change Password</button> -->
+
+  <!--               </div> -->
+  <!--             </div> -->
+
+  <!--           </form> -->
+
+  <!--           <div class="row no-gutters"> -->
+  <!--             <div class="col-7"> -->
+  <!--               <input name="_csrf" type="hidden" value="f8bf43d7-b1d4-40e1-8098-c30160fdefe3"> -->
+  <!--               <a href="javascript:javascript:history.go(-1)" class="btn btn-lg btn-danger btn-block">Don't change -->
+  <!--                 Password</a> -->
+
+  <!--             </div> -->
+  <!--           </div> -->
+  <!--         </div> -->
+
+  <!--       </section> -->
+  <!--     </div> -->
+
+  <!--   </main> -->
+
+  <footer th:replace="fragments.html :: bottom">Here goes the footer</footer>
 
 </body>
 
