--- a/src/main/resources/templates/logout.html
+++ b/src/main/resources/templates/logout.html
@@ -5,58 +5,37 @@
 <head th:replace="fragments.html :: head"></head>
 
 <body>
+
   <header th:replace="fragments.html :: top">Here goes the header</header>
 
   <main>
-    <!--Jumbotron-->
-    <div class="jumbotron">
-      <img class="img" src="../images/milkyway.jpg" alt="alt">
-      <div class="box">
-        <h1 class="display-4" style="color: black">Logout</h1>
-        <p class="lead" style="color: black"></p>
-      </div>
-    </div>
 
+    <!--     Jumbotron -->
+    <!--     <div class="jumbotron"> -->
+    <!--       <img class="img" src="../images/milkyway.jpg" alt="alt"> -->
+    <!--       <div class="box"> -->
+    <!--         <h1 class="display-4" style="color: black">Logout</h1> -->
+    <!--         <p class="lead" style="color: black"></p> -->
+    <!--       </div> -->
+    <!--     </div> -->
 
-
-    <div class="flex-container container">
-      <form class="form-signin" th:action="@{/perform_logout}" method="post">
-
-        <div class="row no-gutters">
-          <div class="col-8">
-            <h2 class="form-signin-heading text-center">Are you sure you want to log out?</h2>
+    <div class="container">
+      <form name="f" class="form-signin form-one-column" method="post" th:action="@{/perform_logout}" action="/logout">
+        <div class="row">
+          <div class="col col-12">
+            <h2 class="form-signin-heading">Are you sure?</h2>
+            <input name="_csrf" type="hidden" value="bfe26e6f-98e1-427f-b704-0fe50378d31a" />
+            <button class="btn btn-lg btn-primary btn-block" type="submit">
+              <i class="fas fa-sign-out-alt fa-fw"></i> Logout
+            </button>
           </div>
         </div>
-
-
-        <div class="row no-gutters">
-          <div class="col-3"></div>
-          <div class="col-2">
-            <p></p>
-            <input name="_csrf" type="hidden" value="60be4d8d-628f-4abb-9430-00dc9f05073e">
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Logout</button>
-          </div>
-
-          <p></p>
-        </div>
-
-
-
-
-
-        <div class="row no-gutters">
-          <p></p>
-        </div>
-
-
-
       </form>
     </div>
+
   </main>
 
-
   <footer th:replace="fragments.html :: bottom">Here goes the footer</footer>
-
 
 </body>
 
