Save state before merging

--- a/src/main/resources/templates/emailExists.html
+++ b/src/main/resources/templates/emailExists.html
@@ -21,14 +21,14 @@
 
 
   <main>
-    <!--Jumbotron-->
-    <div class="jumbotron">
-      <img class="img" src="../images/milkyway.jpg" alt="alt">
-      <div class="box">
-        <h1 class="display-4" style="color: black">Problem</h1>
-        <p class="lead" style="color: black"></p>
-      </div>
-    </div>
+<!--     Jumbotron -->
+<!--     <div class="jumbotron"> -->
+<!--       <img class="img" src="../images/milkyway.jpg" alt="alt"> -->
+<!--       <div class="box"> -->
+<!--         <h1 class="display-4" style="color: black">Problem</h1> -->
+<!--         <p class="lead" style="color: black"></p> -->
+<!--       </div> -->
+<!--     </div> -->
 
 
 
