--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,5 +1,4 @@
 /* Sticky Footer */
-
 body {
 	display: flex;
 	min-height: 100vh;
@@ -10,14 +9,16 @@ main {
 	flex: 1;
 }
 
-/* Spacing between ">>" icon and footer items in the footer */
 
+
+/* Spacing between ">>" icon and footer items in the footer */
 #footer ul.quick-links li a i {
-	margin-right: 5px;
+	margin-right: 1rem;
 }
 
-/* Styles for login form */
 
+
+/* Styles for login form */
 .form-signin {
 	padding: 15px;
 	margin: 0 auto;
@@ -65,6 +66,8 @@ main {
 	flex: 1;
 }
 
+
+
 /* Style for avatar picture in header */
 
 .avatar {
@@ -75,154 +78,27 @@ main {
 }
 
 
-/* .img { */
-/* 	opacity: 0.5; */
-/* 	position: relative; */
-/* 	width: 100%; */
-/* 	object-fit: cover; */
-/* } */
 
-/* .img-view { */
-/* 	margin-top: 2rem; */
-/* 	margin-left: 2rem; */
-/* 	margin-bottom: 2rem; */
-/* 	background-image: url(../images/avatar.png); */
-/* 	background-size: cover; */
-/* 	display: inline-block; */
-/* } */
+/* Style for the main section of pages */
 
-/* .bold { */
-/* 	font-weight: bold; */
-/* } */
-
-
-/* .jumbotron { */
-/* 	position: relative; */
-/* 	max-height: 350px; */
-/* 	overflow: hidden; */
-/* 	padding: 0; */
-/* } */
-
-/* .box { */
-/* 	position: absolute; */
-/* 	top: 50%; */
-/* 	transform: translate(0%, -50%); */
-/* } */
-
-/* @media only screen and (max-width: 400px) { */
-/* 	.display-4 { */
-/* 		font-size: 10vw; */
-/* 	} */
-/* 	.lead { */
-/* 		font-size: 5vw; */
-/* 	} */
-/* } */
-
-/* .display-4, .lead { */
-/* 	padding-left: 20px; */
-/* } */
-
-/* /* Settings für Navbar und Footer*/
-*
-/
-/* .navbar li { */
-/* 	list-style-type: none; */
-/* 	padding-left: 5vw; */
-/* } */
-
-/* .bg-light { */
-/* 	background-color: orange !important; */
-/* 	padding: 0; */
-/* 	padding-left: 2rem; */
-/* 	padding-right: 0.5rem; */
-/* 	padding-top: 0.2rem; */
-/* 	padding-bottom: 0.2rem; */
-/* } */
-
-/* .copyright { */
-/* 	margin-bottom: 1rem; */
-/* } */
-
-/* .card { */
-/* 	margin: 2rem; */
-/* } */
-
-/* .container-edit { */
-/* 	margin: 2rem; */
-/* 	margin-left: 2rem; */
-/* } */
-
-/* /* Settings für Buttons*/
+main {
+	padding-top: 2rem;
+	padding-bottom: 2rem;
+}
 
 
 
+/* Remove list bullets */
 
-
- 
-
-
-
-
-
-*
-/
-/* .btn-danger { */
-/* 	margin-top: 2rem; */
-/* } */
-
-/* .btn-block { */
-/* 	display: block; */
-/* 	width: 100%; */
-/* } */
-
-/* .backbutton { */
-/* 	margin-top: 2rem; */
-/* } */
-
-/* .edit { */
-/* 	margin-top: 2rem; */
-/* } */
-
-/* ul { */
-/* 	list-style-type: none; */
-/* 	margin: 0; */
-/* 	padding: 0; */
-/* } */
-
-/* .card-title { */
-/* 	font-size: 36px; */
-/* } */
-
-/* /* */
-/* .m-1 { */
-/*   margin-left: ($spacer * .25) !important; */
-/* } */
-/* */
+ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;}
 
 
 
+/* Card titles */
 
-
- 
-
-
-
-/* main.index { */
-/* 	background-image: url(../images/milkyway.jpg); */
-/* 	background-size: cover; */
-/* 	display: flex; */
-/* 	justify-content: center; */
-/* 	align-items: center; */
-/* 	flex-warp: */
-/* } */
-
-/* .index-text { */
-/* 	background-color: rgb(255, 255, 255, 0.6); */
-/* } */
-
-/* .p-index { */
-/* 	padding-bottom: 2rem; */
-/* 	font-size: 1rem; */
-/* 	font-weight: 490; */
-/* } */
-
+.card-title {
+	font-size: 2.5rem;
+}
