--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,5 +1,4 @@
 /* Sticky Footer */
-
 body {
 	display: flex;
 	min-height: 100vh;
@@ -10,15 +9,10 @@ main {
 	flex: 1;
 }
 
-
-
 /* Spacing between ">>" icon and footer items in the footer */
-
 #footer ul.quick-links li a i {
 	margin-right: 1rem;
 }
-
-
 
 /* Styles for login form */
 .form-signin {
@@ -68,10 +62,7 @@ main {
 	flex: 1;
 }
 
-
-
 /* Style for avatar picture in header */
-
 .avatar {
 	border-radius: 50%;
 	background-image: url(../images/avatar.png);
@@ -79,28 +70,53 @@ main {
 	height: 4rem;
 }
 
-
-
 /* Style for the main section of pages */
-
 main {
 	padding-top: 2rem;
 	padding-bottom: 2rem;
 }
 
-
-
 /* Remove list bullets */
-
 ul {
 	list-style-type: none;
 	margin: 0;
-	padding: 0;}
+	padding: 0;
+}
 
-
-
-/* Card titles */
-
+/* Skill card titles */
 .card-title {
-	font-size: 2,5rem;
+	font-size: 2.5rem;
+}
+
+/* User list */
+.user-list-item {
+	border-top: 1px solid #ced4da;
+	padding-top: 2rem;
+	padding-bottom: 2rem;
+}
+
+.user-list-avatar {
+	width: 6rem;
+	height: 6rem;
+	margin-bottom: 2rem;
+	border: 1px solid #ced4da;
+}
+
+.user-list-item>div:last-child {
+/* 	margin-top: 2rem; */
+}
+
+/* Form labels */
+.col-form-label {
+	font-weight: bold;
+}
+
+/* Headline for sections */
+.headline {
+	margin-bottom: 2rem;
+}
+
+/* User image in profile views */
+.img-view {
+	border: 1px solid #ced4da;
 }
