--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,18 +9,22 @@
   <header th:replace="fragments.html :: top">Here goes the header</header>
 
   <main>
-  
+
     <div class="container">
       <div class="row">
-        <div class="col-lg-8">
+        <div class="col-lg-7">
           <h1>Welcome to SkillHub</h1>
           <p>SkillHub is a social platform for skill exchange. It serves as a service platform for individuals to
             trade their services and strengths, and in return, learn skills or get personal assistance from subject
-            matter experts thereby removing all barriers of peer to peer learning. Choose from a range of services to
-            help you excel in life, and most importantly, experience the true joy of sharing! So let's join and see what
-            skills could enrich your life. And once you learned something, don't forget: Life is for sharing!</p>
+            matter experts thereby removing all barriers of peer to peer learning.</p>
+          <p>Choose from a range of services to help you excel in life, and most importantly, experience the true
+            joy of sharing! So let's join and see what skills could enrich your life. And once you learned something,
+            don't forget:</p>
+          <p>
+            <em>Life is for sharing!</em>
+          </p>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-5">
           <div style="left: 0; width: 100%; height: 0; position: relative; padding-bottom: 49%;">
             <iframe src="//cdn.iframe.ly/pM9DVZe?media=1"
               style="border: 0; top: 0; left: 0; width: 100%; height: 100%; position: absolute;"></iframe>
