--- a/src/main/resources/templates/users/get_by_skill.html
+++ b/src/main/resources/templates/users/get_by_skill.html
@@ -21,51 +21,50 @@
 
     <div class="container">
 
-      <div class="row" th:each="user : ${users}">
+      <div class="row justify-content-between user-list-item" th:each="user : ${users}" th:object="${user}">
 
-        <div class="col col-6 col-lg-2">
-          <img class="img-view" th:unless="${user.image}" src="../images/avatar.png" height="150" width="150"> <img
-            class="img-view" th:if="${user.image}" th:src="@{'/user/' + ${user.id} + '/image'}" height="150" width="150">
+        <div class="col col-auto">
+          <img class="user-list-avatar" th:unless="${user.image}" src="../images/avatar.png"> <img
+            class="user-list-avatar" th:if="${user.image}" th:src="@{'/user/' + ${user.id} + '/image'}">
         </div>
 
-        <div class="w-100 d-block d-lg-none"></div>
+        <div class="w-100 d-block d-md-none"></div>
 
-        <div class="col col-12 col-lg-8">
+        <div class="col d-flex">
           <div class="container-fluid">
-            <form th:object="${user}">
 
-              <h2 class="headline" th:text="*{firstName}">First name</h2>
+            <h2 class="headline" th:text="*{firstName}">First name</h2>
 
-              <div class="form-group row">
-                <label class="col-sm-3 col-form-label">City</label>
-                <div class="col-sm-9">
-                  <div class="form-control-plaintext" th:text="*{city}"></div>
-                </div>
+            <div class="row">
+              <label class="col col-12 col-sm-3 col-lg-2 col-form-label">City</label>
+              <div class="col d-md-flex">
+                <div class="form-control-plaintext" th:text="*{city}"></div>
               </div>
+            </div>
 
-              <div class="form-group row">
-                <label class="col-sm-3 col-form-label">Age</label>
-                <div class="col-sm-4">
-                  <div class="form-control-plaintext" th:text="*{age}"></div>
-                </div>
+            <div class="row">
+              <label class="col col-12 col-sm-3 col-lg-2 col-form-label">Age</label>
+              <div class="col d-md-flex">
+                <div class="form-control-plaintext" th:text="*{age}"></div>
               </div>
+            </div>
 
-              <div class="form-group row">
-                <label class="col-sm-3 col-form-label">Description</label>
-                <div class="col-sm-9">
-                  <div class="form-control-plaintext" th:text="*{description}"></div>
-                </div>
+            <div class="row">
+              <label class="col col-12 col-sm-3 col-lg-2 col-form-label">Description</label>
+              <div class="col d-md-flex">
+                <div class="form-control-plaintext" th:text="*{description}"></div>
               </div>
-
-              <h2 class="form-submit"></h2>
-
-              <a th:href="@{${'/user/view?id=' + user.id}}" class="btn btn-primary"><i
-                class="far fa-address-card fa-fw"></i> View profile</a>
-
-            </form>
+            </div>
+            
           </div>
         </div>
 
+        <div class="w-100 d-block d-md-none"></div>
+        
+        <div class="col col-auto">
+          <a th:href="@{${'/user/view?id=' + user.id}}" class="btn btn-primary"><i class="far fa-address-card fa-fw"></i>
+            View profile</a>
+        </div>
 
       </div>
 
