Save state before coloring and CSS

--- a/src/main/resources/templates/logout.html
+++ b/src/main/resources/templates/logout.html
@@ -4,7 +4,7 @@
 
 <head th:replace="fragments.html :: head"></head>
 
-<body>
+<body class="text-center">
 
   <header th:replace="fragments.html :: top">Here goes the header</header>
 
