--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -41,7 +41,7 @@
               </div>
 
               <div class="form-group">
-                <label for="City">City</label> <input type="text" class="form-control" id="city" name="city"
+                <label for="city">City</label> <input type="text" class="form-control" id="city" name="city"
                   placeholder="Nürnberg" required th:field="*{city}">
               </div>
 
