--- a/src/main/resources/templates/emailExists.html
+++ b/src/main/resources/templates/emailExists.html
@@ -4,63 +4,29 @@
 
 <head th:replace="fragments.html :: head"></head>
 
-<body>
-  <header>
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
-      <a class="navbar-brand" href="/">SkillHub</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-        </ul>
-      </div>
-    </nav>
-  </header>
 
+<body class="text-center">
+
+  <header th:replace="fragments.html :: top">Here goes the header</header>
 
   <main>
-<!--     Jumbotron -->
-<!--     <div class="jumbotron"> -->
-<!--       <img class="img" src="../images/milkyway.jpg" alt="alt"> -->
-<!--       <div class="box"> -->
-<!--         <h1 class="display-4" style="color: black">Problem</h1> -->
-<!--         <p class="lead" style="color: black"></p> -->
-<!--       </div> -->
-<!--     </div> -->
 
-
-
-    <div class="flex-container container">
-
-      <div class="row no-gutters">
-        <div class="col-8">
-          <h2>
-            The e-mail address you entered is already used by another user.
-            <br></br>
-            Please make sure to use a unique e-mal address.
-
-
-          </h2>
+    <div class="container">
+      <div class="form-signin form-one-column">
+        <div class="row">
+          <div class="col col-12">
+            <h4 class="form-signin-heading">The email address you entered is already used by another user.</h4>
+            <a class="btn btn-lg btn-primary btn-block" href="javascript:javascript:history.go(-1)">
+              <i class="fas fa-edit fa-fw"></i> Try again
+            </a>
+          </div>
         </div>
-      </div>
-
-      <div class="row no-gutters">
-        <div class="col-3"></div>
-        <div class="col-2">
-          <p></p>
-          <a href="javascript:javascript:history.go(-1)" class="btn btn-primary">Try again</a>
-        </div>
-
-        <p></p>
       </div>
     </div>
+
   </main>
 
-
   <footer th:replace="fragments.html :: bottom">Here goes the footer</footer>
-
 
 </body>
 
