--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -8,115 +8,108 @@
 
   <header th:replace="fragments.html :: top">Here goes the header</header>
 
-  <section>
-    <div class="flex-container">
-      <div class="container cards">
-        <div class="row no-gutters">
+  <div class="container">
 
-          <div class="card w-75">
-            <div class="card-header">
-              <h3>Create your account</h3>
+    <div class="row">
+
+      <div class="col col-6 col-lg-2">
+        <img class="img-view" th:unless="${userForm.image}" src="../images/avatar.png" width="100%"> <img
+          class="img-view" th:if="${userForm.image}" th:src="@{'/user/' + ${userForm.id} + '/image'}" width="100%">
+      </div>
+
+      <div class="col col-12 col-lg-8">
+        <div>
+          <form enctype="multipart/form-data" method="post" th:action="@{/user/upsert}" th:object="${userForm}">
+
+            <h2 class="headline">Your profile</h2>
+
+            <div class="form-group">
+              <label for="user-first-name">First name</label><input type="text" class="form-control" id="firstName"
+                name="firstName" placeholder="Stephanie" required th:field="*{firstName}">
             </div>
-            <div class="card-body">
 
-
-              <form enctype="multipart/form-data" method="post" th:action="@{/register}" th:object="${userForm}">
-                <input name="id" th:field="*{id}" type="hidden">
-                <!--<input name="age" th:field="*{age}" type="hidden">-->
-
-                <div class="form-group">
-                  <label for="user-first-name">First name</label>
-                  <input type="text" class="form-control" id="firstName" name="firstName" placeholder="Stephanie"
-                    required th:field="*{firstName}">
-                </div>
-
-                <div class="form-group">
-                  <label for="user-last-name">Last name</label>
-                  <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Bauer"
-                    th:field="*{lastName}">
-                </div>
-
-                <div class="form-group">
-                  <label for="zip-code">Zip code</label>
-                  <input type="text" class="form-control" id="zip-code" name="zipName" placeholder="90427"
-                    th:field="*{zipCode}">
-                </div>
-
-                <div class="form-group">
-                  <label for="City">City</label>
-                  <input type="text" class="form-control" id="city" name="city" placeholder="Nürnberg" required
-                    th:field="*{city}">
-                </div>
-
-                <div class="form-group">
-                  <label for="dateOfBirth">Birthday</label>
-                  <input type="date" class="form-control" id="dateOfBirth" name="dateOfBirth" placeholder="1995-06-21"
-                    required th:field="*{dateOfBirth}">
-                </div>
-
-                <div class="form-group">
-                  <label for="email">Email address</label>
-                  <input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email"
-                    placeholder="stephanie.bauer@telekom.de" required th:field="*{email}">
-                  <small class="form-text text-muted">We'll never share your email with anyone else.</small>
-                </div>
-
-                <div class="form-group">
-                  <label for="password">Password</label>
-                  <input type="password" class="form-control" id="password" aria-describedby="passwordHelp"
-                    name="password" onchange="if(this.checkValidity()) form.passwordRepeated.pattern = this.value;"
-                    placeholder="Password" required th:field="*{password}">
-                </div>
-
-
-                <div class="form-group">
-                  <label for="passwordRepeated">Password (repeated)</label>
-                  <input type="password" class="form-control" id="passwordRepeated"
-                    aria-describedby="passwordRepeatedHelp" name="passwordRepeated"
-                    onchange="this.setCustomValidity(this.validity.patternMismatch ? 'Please enter the same Password as above' : '');"
-                    placeholder="Verify Password" required th:field="*{passwordRepeated}">
-                </div>
-
-                <div class="form-group">
-                  <label for="user-description">Description</label>
-                  <textarea class="form-control" id="user-description" name="description"
-                    placeholder="Please enter your description here." th:field="*{description}" rows="3"></textarea>
-                </div>
-
-                <div class="form-group">
-                  <label for="image">Upload your photo</label>
-                  <div class="col-sm-10">
-                    <input type="file" class="form-control-file" id="image" name="image" th:field="*{image}">
-                  </div>
-                  <span th:if="${#fields.hasErrors('*{image}')}" th:errors="*{image}">Image error</span>
-                </div>
-
-
-                <ul>
-                  <li th:each="userSkillLevel, stat : *{userSkillLevels}">
-                    <div class="custom-control custom-switch">
-                      <input type="hidden" th:field="*{userSkillLevels[__${stat.index}__].id}" />
-                      <input class="custom-control-input" type="checkbox" th:id="${'toggle' + userSkillLevel.id}"
-                        th:field="*{userSkillLevels[__${stat.index}__].checked}" />
-                      <label class="custom-control-label" th:for="${'toggle' + userSkillLevel.id}"
-                        th:text="${userSkillLevel.name}">Climbing </label>
-                    </div>
-                  </li>
-                </ul>
-
-                <button type="submit" value="Submit" class="btn btn-primary edit">Create Account</button>
-              </form>
+            <div class="form-group">
+              <label for="user-last-name">Last name</label> <input type="text" class="form-control" id="lastName"
+                name="lastName" placeholder="Bauer" th:field="*{lastName}">
             </div>
-          </div>
+
+            <div class="form-group">
+              <label for="zip-code">Zip code</label> <input type="text" class="form-control" id="zip-code"
+                name="zipName" placeholder="90427" th:field="*{zipCode}">
+            </div>
+
+            <div class="form-group">
+              <label for="City">City</label> <input type="text" class="form-control" id="city" name="city"
+                placeholder="Nürnberg" required th:field="*{city}">
+            </div>
+
+            <div class="form-group">
+              <label for="dateOfBirth">Date of birth</label> <input type="date" class="form-control" id="dateOfBirth"
+                name="dateOfBirth" placeholder="1995-06-21" required th:field="*{dateOfBirth}">
+            </div>
+
+            <div class="form-group">
+              <label for="email">Public email</label> <input type="email" class="form-control" id="email"
+                aria-describedby="emailHelp" name="email" placeholder="stephanie.bauer@telekom.de" required
+                th:field="*{email}">
+            </div>
+
+            <div class="form-group">
+              <label for="user-description">Description</label>
+              <textarea class="form-control" id="user-description" name="description"
+                placeholder="Please enter your description here." th:field="*{description}" rows="3"></textarea>
+            </div>
+
+            <h2 class="headline">Your photo</h2>
+
+            <div class="form-group">
+              <label for="image">Upload your photo</label>
+              <div class="col-sm-10">
+                <input type="file" class="form-control-file" id="image" name="image" th:field="*{image}">
+              </div>
+              <span th:if="${#fields.hasErrors('*{image}')}" th:errors="*{image}">Image error</span>
+            </div>
+
+            <h2 class="headline">Your skills</h2>
+
+            <ul>
+              <li th:each="userSkillLevel, stat : *{userSkillLevels}">
+                <div class="custom-control custom-switch">
+                  <input type="hidden" th:field="*{userSkillLevels[__${stat.index}__].id}" /> <input
+                    class="custom-control-input" type="checkbox" th:id="${'toggle' + userSkillLevel.id}"
+                    th:field="*{userSkillLevels[__${stat.index}__].checked}" /> <label class="custom-control-label"
+                    th:for="${'toggle' + userSkillLevel.id}" th:text="${userSkillLevel.name}">Climbing </label>
+                </div>
+              </li>
+            </ul>
+
+            <h2 class="headline">Your password</h2>
+
+            <div class="form-group">
+              <label for="password">Password</label> <input type="text" class="form-control" id="password"
+                name="password" onchange="if(this.checkValidity()) form.passwordRepeated.pattern = this.value;"
+                placeholder="Password" required th:field="*{password}">
+            </div>
+
+            <div class="form-group">
+              <label for="passwordRepeated">Password (repeated)</label> <input type="text" class="form-control"
+                id="passwordRepeated" name="passwordRepeated"
+                onchange="this.setCustomValidity(this.validity.patternMismatch ? 'Please enter the same Password as above' : '');"
+                placeholder="Verify Password" required th:field="*{passwordRepeated}">
+            </div>
+
+            <h2 class="form-submit"></h2>
+
+            <button type="submit" value="Submit" class="btn btn-primary">Create user</button>
+
+          </form>
         </div>
       </div>
     </div>
-  </section>
 
+  </div>
 
   <footer th:replace="fragments.html :: bottom">Here goes the footer</footer>
-
-
 
 </body>
 
