Finalize new layout

--- a/src/main/resources/templates/emailExists.html
+++ b/src/main/resources/templates/emailExists.html
@@ -16,8 +16,8 @@
         <div class="row">
           <div class="col col-12">
             <h4 class="form-signin-heading">The email address you entered is already used by another user.</h4>
-            <a class="btn btn-lg btn-primary btn-block" href="javascript:javascript:history.go(-1)">
-              <i class="fas fa-edit fa-fw"></i> Try again
+            <a class="btn btn-lg btn-primary btn-block" href="javascript:javascript:history.go(-1)"> <i
+              class="fas fa-edit fa-fw"></i> Try again
             </a>
           </div>
         </div>
