--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,3 +1,186 @@
+/* Colors */
+/* Base: f80046 Dark: ce003a Light: eeeeee */
+#bootstrap-overrides .navbar {
+    background-color: #f80046!important;
+}
+
+#bootstrap-overrides .navbar .navbar-brand {
+    color: #eeeeee;
+    font-weight: bold;
+    border: 1px solid #eeeeee;
+    border-radius: .25rem;
+    margin: 0 0.25em;
+    padding: 0.25em; 
+}
+
+#bootstrap-overrides .navbar .navbar-brand:hover,
+#bootstrap-overrides .navbar .navbar-brand:focus {
+    color: #ffffff;
+}
+
+#bootstrap-overrides .navbar .navbar-text {
+    color: #eeeeee;
+}
+
+#bootstrap-overrides .navbar .navbar-text a {
+    color: #ffffff;
+}
+
+#bootstrap-overrides .navbar .navbar-text a:hover,
+#bootstrap-overrides .navbar .navbar-text a:focus {
+    color: #ffffff; 
+}
+
+#bootstrap-overrides .navbar .navbar-nav .nav-link {
+    color: #eeeeee;
+    border-radius: .25rem;
+    margin: 0 0.25em;
+}
+
+#bootstrap-overrides .navbar .navbar-nav .nav-link:not(.disabled):hover,
+#bootstrap-overrides .navbar .navbar-nav .nav-link:not(.disabled):focus {
+    color: #ffffff;
+}
+
+#bootstrap-overrides .navbar .navbar-nav .nav-item.active .nav-link,
+#bootstrap-overrides .navbar .navbar-nav .nav-item.active .nav-link:hover,
+#bootstrap-overrides .navbar .navbar-nav .nav-item.active .nav-link:focus,
+#bootstrap-overrides .navbar .navbar-nav .nav-item.show .nav-link,
+#bootstrap-overrides .navbar .navbar-nav .nav-item.show .nav-link:hover,
+#bootstrap-overrides .navbar .navbar-nav .nav-item.show .nav-link:focus {
+    color: #ffffff;
+    background-color: #ce003a;
+}
+
+#bootstrap-overrides .navbar .navbar-toggle {
+    border-color: #ce003a;
+}
+
+#bootstrap-overrides .navbar .navbar-toggle:hover,
+#bootstrap-overrides .navbar .navbar-toggle:focus {
+    background-color: #ce003a;
+}
+
+#bootstrap-overrides .navbar .navbar-toggle .navbar-toggler-icon {
+    color: #eeeeee;
+}
+
+#bootstrap-overrides .navbar .navbar-collapse,
+#bootstrap-overrides .navbar .navbar-form {
+    border-color: #eeeeee;
+}
+
+#bootstrap-overrides .navbar .navbar-link {
+    color: #eeeeee;
+}
+
+#bootstrap-overrides .navbar .navbar-link:hover {
+    color: #ffffff;
+}
+
+@media (max-width: 575px) {
+    #bootstrap-overrides .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item {
+        color: #eeeeee;
+    }
+    
+    #bootstrap-overrides .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item:hover,
+    .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item:focus {
+        color: #ffffff;
+    }
+    
+    #bootstrap-overrides .navbar-expand-sm .navbar-nav .show .dropdown-menu .dropdown-item.active {
+        color: #ffffff;
+        background-color: #ce003a;
+    }
+}
+
+@media (max-width: 767px) {
+    #bootstrap-overrides .navbar-expand-md .navbar-nav .show .dropdown-menu .dropdown-item {
+        color: #eeeeee;
+    }
+    
+    #bootstrap-overrides .navbar-expand-md .navbar-nav .show .dropdown-menu .dropdown-item:hover,
+    #bootstrap-overrides .navbar-expand-md .navbar-nav .show .dropdown-menu .dropdown-item:focus {
+        color: #ffffff;
+    }
+    
+    #bootstrap-overrides .navbar-expand-md .navbar-nav .show .dropdown-menu .dropdown-item.active {
+        color: #ffffff;
+        background-color: #ce003a;
+    }
+}
+
+@media (max-width: 991px) {
+    #bootstrap-overrides .navbar-expand-lg .navbar-nav .show .dropdown-menu .dropdown-item {
+        color: #eeeeee;
+    }
+    
+    #bootstrap-overrides .navbar-expand-lg .navbar-nav .show .dropdown-menu .dropdown-item:hover,
+    #bootstrap-overrides .navbar-expand-lg .navbar-nav .show .dropdown-menu .dropdown-item:focus {
+        color: #ffffff;
+    }
+    
+    #bootstrap-overrides .navbar-expand-lg .navbar-nav .show .dropdown-menu .dropdown-item.active {
+        color: #ffffff;
+        background-color: #ce003a;
+    }
+}
+
+@media (max-width: 1199px) {
+    #bootstrap-overrides .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item {
+        color: #eeeeee;
+    }
+    
+    #bootstrap-overrides .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item:hover,
+    #bootstrap-overrides .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item:focus {
+        color: #ffffff;
+    }
+    
+    #bootstrap-overrides .navbar-expand-xl .navbar-nav .show .dropdown-menu .dropdown-item.active {
+        color: #ffffff;
+        background-color: #ce003a;
+    }
+}
+
+#bootstrap-overrides .navbar-expand .navbar-nav .show .dropdown-menu .dropdown-item {
+    color: #eeeeee;
+}
+
+#bootstrap-overrides .navbar-expand .navbar-nav .show .dropdown-menu .dropdown-item:hover,
+#bootstrap-overrides .navbar-expand .navbar-nav .show .dropdown-menu .dropdown-item:focus {
+    color: #ffffff;
+}
+
+#bootstrap-overrides .navbar-expand .navbar-nav .show .dropdown-menu .dropdown-item.active {
+    color: #ffffff;
+    background-color: #ce003a;
+}
+
+footer a {
+	color: #eeeeee;
+	font-style: normal;
+}
+
+footer a:hover {
+	color: #ffffff;
+	font-style: normal;
+	text-decoration: none;
+}
+
+main .row {
+	background-color: #ffffff;
+}
+
+/* Footer */
+footer {
+	padding-top: 2rem;
+	padding-bottom: 1rem;
+    background-color: #f80046;
+	color: #eeeeee;
+	font-style: italic;
+}
+
+
 /* Sticky Footer */
 body {
 	display: flex;
@@ -88,35 +271,50 @@ ul {
 	font-size: 2.5rem;
 }
 
-/* User list */
+/* User with skill list */
 .user-list-item {
 	border-top: 1px solid #ced4da;
-	padding-top: 2rem;
-	padding-bottom: 2rem;
+	padding-top: 1rem;
+
 }
 
 .user-list-avatar {
 	width: 6rem;
 	height: 6rem;
-	margin-bottom: 2rem;
 	border: 1px solid #ced4da;
+	border-radius: 50%;
 }
 
-.user-list-item>div:last-child {
-/* 	margin-top: 2rem; */
+main > .container > .row > .col {
+	margin-bottom: 1rem;
+}
+
+
+/* Forms with headlines */
+form h2:not(:first-of-type) {
+	margin-top: 2rem;
 }
 
 /* Form labels */
 .col-form-label {
 	font-weight: bold;
+	color: #a0a0a0;
 }
 
 /* Headline for sections */
 .headline {
-	margin-bottom: 2rem;
+	margin-bottom: 1rem;
 }
 
 /* User image in profile views */
 .img-view {
 	border: 1px solid #ced4da;
+	border-radius: 50%;
+	margin-bottom: 1rem;
 }
+
+/* Jumbotron */
+.jumbotron {
+	margin-top: -2rem
+}
+	
