--- a/src/main/resources/templates/changePw.html
+++ b/src/main/resources/templates/changePw.html
@@ -10,15 +10,6 @@
 
   <main>
 
-    <!--     Jumbotron -->
-    <!--     <div class="jumbotron"> -->
-    <!--       <img class="img" src="../images/milkyway.jpg" alt="alt"> -->
-    <!--       <div class="box"> -->
-    <!--         <h1 class="display-4" style="color: black">Please Login</h1> -->
-    <!--         <p class="lead" style="color: black">If you don't have an user account yet, please register.</p> -->
-    <!--       </div> -->
-    <!--     </div> -->
-
     <div class="container">
       <form class="form-signin form-one-column" method="post" th:action="@{/password/upsert}"
         th:object="${passwordForm}">
@@ -40,94 +31,13 @@
             <button class="btn btn-lg btn-primary btn-block" type="submit">
               <i class="fas fa-sign-in-alt fa-fw"></i> Save new Password
             </button>
-            <a class="btn btn-lg btn-outline-danger btn-block" href="javascript:javascript:history.go(-1)">
-              Cancel</a>
+            <a class="btn btn-lg btn-outline-danger btn-block" href="javascript:javascript:history.go(-1)"> Cancel</a>
           </div>
         </div>
       </form>
     </div>
 
   </main>
-
-
-
-
-
-  <!--   <main class="changePw_background"> -->
-
-  <!--     <div class="changePw-box"> -->
-  <!--       <section> -->
-  <!--         <div class="flex-container container"> -->
-  <!--           <form method="post" th:action="@{/password/upsert}" th:object="${passwordForm}"> -->
-
-  <!--             <fieldset> -->
-  <!--               <h2>Change Password</h2> -->
-
-  <!--               <div class="row no-gutters"> -->
-  <!--                 <div class="col-7"> -->
-
-  <!--                   <input name="_csrf" type="hidden" value="f8bf43d7-b1d4-40e1-8098-c30160fdefe3"> -->
-  <!--                   <a href="javascript:javascript:history.go(-1)" class="btn btn-dark btn-block"> -->
-  <!--                     <span sec:authentication="name"></span> -->
-  <!--                   </a> -->
-
-  <!--                 </div> -->
-  <!--               </div> -->
-
-  <!--               <div class="row no-gutters"> -->
-  <!--                 <p></p> -->
-  <!--               </div> -->
-
-  <!--               <div class="row no-gutters"> -->
-  <!--                 <div class="col-7"> -->
-  <!--                   <p> -->
-
-  <!--                     <input type="password" class="form-control " id="password" aria-describedby="passwordHelp" -->
-  <!--                       name="password" onchange="if(this.checkValidity()) form.passwordRepeated.pattern = this.value;" -->
-  <!--                       placeholder="New password" required th:field="*{password}"> -->
-  <!--                   </p> -->
-  <!--                 </div> -->
-  <!--               </div> -->
-
-  <!--               <div class="row no-gutters"> -->
-  <!--                 <div class="col-7"> -->
-
-  <!--                   <input type="password" class="form-control" id="passwordRepeated" -->
-  <!--                     aria-describedby="passwordRepeatedHelp" name="passwordRepeated" -->
-  <!--                     onchange="this.setCustomValidity(this.validity.patternMismatch ? 'Please enter the same Password as above' : '');" -->
-  <!--                     placeholder="Repeat new password" required th:field="*{passwordRepeated}"> -->
-
-  <!--                   <p> -->
-  <!--                   </p> -->
-  <!--                 </div> -->
-  <!--               </div> -->
-  <!--             </fieldset> -->
-
-  <!--             <div class="row no-gutters"> -->
-  <!--               <div class="col-7"> -->
-  <!--                 <input name="_csrf" type="hidden" value="f8bf43d7-b1d4-40e1-8098-c30160fdefe3"> -->
-
-  <!--                 <button type="submit" value="Submit" class="btn btn-lg btn-success btn-block">Change Password</button> -->
-
-  <!--               </div> -->
-  <!--             </div> -->
-
-  <!--           </form> -->
-
-  <!--           <div class="row no-gutters"> -->
-  <!--             <div class="col-7"> -->
-  <!--               <input name="_csrf" type="hidden" value="f8bf43d7-b1d4-40e1-8098-c30160fdefe3"> -->
-  <!--               <a href="javascript:javascript:history.go(-1)" class="btn btn-lg btn-danger btn-block">Don't change -->
-  <!--                 Password</a> -->
-
-  <!--             </div> -->
-  <!--           </div> -->
-  <!--         </div> -->
-
-  <!--       </section> -->
-  <!--     </div> -->
-
-  <!--   </main> -->
 
   <footer th:replace="fragments.html :: bottom">Here goes the footer</footer>
 
