--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -21,7 +21,7 @@
 <body>
 
   <!-- Fragment: Header -->
-  <header th:fragment="top">
+  <header th:fragment="top" id="bootstrap-overrides">
     <nav class="navbar navbar-expand-md navbar-light bg-light">
       <a class="navbar-brand" href="/">SkillHub</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -47,8 +47,8 @@
 
         <a th:href="@{'/user/profile'}"> <img class="mr-3 my-2 avatar" sec:authorize="hasRole('ROLE_USER')"
           th:src="@{'/avatar/image'} != null ? @{'/avatar/image'} : '/images/avatar.png'" alt=" ">
-        </a> <a class="btn btn-outline-primary btn-sm" sec:authorize="!isAuthenticated()" href="/login">Login / Register</a>
-        <a class="btn btn-outline-primary btn-sm" sec:authorize="isAuthenticated()" href="/logout">Logout</a>
+        </a> <a class="btn btn-outline-light btn-sm" sec:authorize="!isAuthenticated()" href="/login">Login / Register</a> <a
+          class="btn btn-outline-light btn-sm" sec:authorize="isAuthenticated()" href="/logout">Logout</a>
 
       </div>
 
@@ -96,9 +96,6 @@
         <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center">
           <p>
             <a href="/">SkillHub</a> Inc.
-          </p>
-          <p class="h6">
-            &copy All right reversed.<a class="ml-2" href="https://www.telekom.com" target="_blank">Telekom AG</a>
           </p>
         </div>
       </div>
