--- a/src/main/resources/templates/users/get_all.html
+++ b/src/main/resources/templates/users/get_all.html
@@ -8,66 +8,63 @@
 
   <header th:replace="fragments.html :: top">Here goes the header</header>
 
-  <section>
-    <div class="flex-container" style="margin-right: 1rem; margin-left: 1rem;">
-        <div class="row no-gutters" style="margin-top: 1rem;">
-          <h3>All users</h3>
-        </div>
+  <main>
 
-        <div class="row no-gutters">
-          <div class="col-2">
-            <p></p>
-            <a href="/register" class="btn btn-outline-primary" role="button" aria-pressed="true">Add a new user</a>
-            <p></p>
-          </div>
+    <div class="flex-container" style="margin-right: 1rem; margin-left: 1rem;">
+      <div class="row no-gutters" style="margin-top: 1rem;">
+        <h3>All users</h3>
+      </div>
+
+      <div class="row no-gutters">
+        <div class="col-2">
+          <p></p>
+          <a href="/register" class="btn btn-outline-primary" role="button" aria-pressed="true">Add a new user</a>
           <p></p>
         </div>
-
-        <div class="row no-gutters">
-          <table class="table table-sm">
-            <thead class="thead-light">
-              <tr>
-                <th>Id</th>
-                <th scope="col">First name</th>
-                <th scope="col">Last name</th>
-                <th scope="col">Birthday</th>
-                <th scope="col">Zip Code</th>
-                <th scope="col">City</th>
-                <th scope="col">Email</th>
-                <th scope="col">Description</th>
-
-                <th scope="col"></th>
-                <th scope="col"></th>
-              </tr>
-              
-            </thead>
-            <tbody>
-              <tr th:each="user : ${users}">
-                <td th:text="${user.id}">id</td>
-                <td th:text="${user.firstName}">First name</td>
-                <td th:text="${user.lastName}">Last name</td>
-                <td th:text="${user.dateOfBirth}">Birthday</td>
-                <td th:text="${user.zipCode}">Zip Code</td>
-                <td th:text="${user.city}">City</td>
-                <td th:text="${user.email}">Email</td>
-                <td th:text="${user.description}" style="width: 20%">Description</td>
-
-                <td>
-                  <a th:href="@{/user/edit(id=${user.id})}"><i class="fas fa-edit fa-fw"></i></a>
-                </td>
-                <td>
-                  <a th:href="@{/user/delete(id=${user.id})}"><i class="fas fa-trash-alt fa-fw"></i></a>
-                </td>
-              </tr>
-
-
-            </tbody>
-          </table>
-        </div>
-
-
+        <p></p>
       </div>
-  </section>
+
+      <div class="row no-gutters">
+        <table class="table table-sm">
+          <thead class="thead-light">
+            <tr>
+              <th>Id</th>
+              <th scope="col">First name</th>
+              <th scope="col">Last name</th>
+              <th scope="col">Birthday</th>
+              <th scope="col">Zip Code</th>
+              <th scope="col">City</th>
+              <th scope="col">Email</th>
+              <th scope="col">Description</th>
+
+              <th scope="col"></th>
+              <th scope="col"></th>
+            </tr>
+
+          </thead>
+          <tbody>
+            <tr th:each="user : ${users}">
+              <td th:text="${user.id}">id</td>
+              <td th:text="${user.firstName}">First name</td>
+              <td th:text="${user.lastName}">Last name</td>
+              <td th:text="${user.dateOfBirth}">Birthday</td>
+              <td th:text="${user.zipCode}">Zip Code</td>
+              <td th:text="${user.city}">City</td>
+              <td th:text="${user.email}">Email</td>
+              <td th:text="${user.description}" style="width: 20%">Description</td>
+
+              <td><a th:href="@{/user/edit(id=${user.id})}"><i class="fas fa-edit fa-fw"></i></a></td>
+              <td><a th:href="@{/user/delete(id=${user.id})}"><i class="fas fa-trash-alt fa-fw"></i></a></td>
+            </tr>
+
+
+          </tbody>
+        </table>
+      </div>
+
+    </div>
+
+  </main>
 
   <footer th:replace="fragments.html :: bottom">Here goes the footer</footer>
 
