--- a/src/main/resources/templates/users/get_by_skill.html
+++ b/src/main/resources/templates/users/get_by_skill.html
@@ -10,14 +10,14 @@
 
   <main>
 
-    <!--     Jumbotron -->
-    <!--     <div class="jumbotron"> -->
-    <!--       <img class="img" th:src="@{${'../images/' + skill.imageURL}}" alt="alt"> -->
-    <!--       <div class="box"> -->
-    <!--         <h1 class="display-4" style="color: black" th:text="|${skill.name} Skill|">Climbing Skills</h1> -->
-    <!--         <p class="lead" style="color: black">Find people who teach you their skill! Let's get in contact!</p> -->
-    <!--       </div> -->
-    <!--     </div> -->
+    <div class="jumbotron jumbotron-fluid"
+      th:style="'background:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)
+        ),url('+@{${'../images/' + skill.imageURL}}+'); background-size: cover;'">
+      <div class="container">
+        <h1 class="display-4" style="color: white" th:text="|${skill.name} Skill|">Climbing Skills</h1>
+        <p class="lead" style="color: white">Find people who teach you their skill! Let's get in contact!</p>
+      </div>
+    </div>
 
     <div class="container">
 
@@ -55,12 +55,12 @@
                 <div class="form-control-plaintext" th:text="*{description}"></div>
               </div>
             </div>
-            
+
           </div>
         </div>
 
         <div class="w-100 d-block d-md-none"></div>
-        
+
         <div class="col col-auto">
           <a th:href="@{${'/user/view?id=' + user.id}}" class="btn btn-primary"><i class="far fa-address-card fa-fw"></i>
             View profile</a>
