--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -15,8 +15,8 @@
       <div class="row">
 
         <div class="col col-6 col-lg-2">
-          <img class="img-view" th:unless="${user.image}" src="../images/avatar.png" width="100%"> <img
-            class="img-view" th:if="${user.image}" th:src="@{'/user/' + ${user.id} + '/image'}" width="100%">
+          <img class="img-view" th:unless="${user.image}" src="../images/avatar.png" height="150" width="150"> <img
+            class="img-view" th:if="${user.image}" th:src="@{'/images/user/' + ${user.id}}" height="150" width="150">
         </div>
 
         <div class="w-100 d-block d-lg-none"></div>
