--- a/src/main/resources/templates/users/get_by_skill.html
+++ b/src/main/resources/templates/users/get_by_skill.html
@@ -25,7 +25,7 @@
 
         <div class="col col-auto">
           <img class="user-list-avatar" th:unless="${user.image}" src="../images/avatar.png"> <img
-            class="user-list-avatar" th:if="${user.image}" th:src="@{'/user/' + ${user.id} + '/image'}">
+            class="user-list-avatar" th:if="${user.image}" th:src="@{'/images/user/' + ${user.id}}">
         </div>
 
         <div class="w-100 d-block d-md-none"></div>
