Fix avatar images

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -249,8 +249,10 @@ main {
 .avatar {
 	border-radius: 50%;
 	background-image: url(../images/avatar.png);
+	background-size: cover;
 	width: 4rem;
 	height: 4rem;
+	display: inline-block;
 }
 
 /* Style for the main section of pages */
