--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -46,7 +46,7 @@
         </ul>
 
         <a th:href="@{'/user/profile'}"> <img class="mr-3 my-2 avatar" sec:authorize="hasRole('ROLE_USER')"
-          th:src="@{'/avatar/image'} != null ? @{'/avatar/image'} : '/images/avatar.png'" alt=" ">
+          th:src="@{'/avatar/image'}" alt=" ">
         </a> <a class="btn btn-outline-light btn-sm" sec:authorize="!isAuthenticated()" href="/login">Login / Register</a> <a
           class="btn btn-outline-light btn-sm" sec:authorize="isAuthenticated()" href="/logout">Logout</a>
 
